--- a/10 websites/foods/index.html
+++ b/10 websites/foods/index.html
@@ -55,6 +55,64 @@
         </div>
       </section>
       <!-- end of section2 -->
+
+      <!-- section3 -->
+
+      <section class="section-3">
+        <h1 class="section-heading">gallery</h1>
+        <div class="gallery">
+          <a href="#" class="gallery-link" title="Order Now">
+            <img src="images/gallery-img-1.jpg" class="food-img" />
+            <h3 class="food-name">Pancakes</h3>
+            <p class="food-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+              repudiandae quod fugit sit ipsam deserunt.
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order Now">
+            <img src="images/gallery-img-2.jpg" class="food-img" />
+            <h3 class="food-name">Cupcakes</h3>
+            <p class="food-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+              repudiandae quod fugit sit ipsam deserunt.
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order Now">
+            <img src="images/gallery-img-3.jpg" class="food-img" />
+            <h3 class="food-name">Hummus</h3>
+            <p class="food-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+              repudiandae quod fugit sit ipsam deserunt.
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order Now">
+            <img src="images/gallery-img-4.jpg" class="food-img" />
+            <h3 class="food-name">Hamburger</h3>
+            <p class="food-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+              repudiandae quod fugit sit ipsam deserunt.
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order Now">
+            <img src="images/gallery-img-5.jpg" class="food-img" />
+            <h3 class="food-name">Salmon</h3>
+            <p class="food-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+              repudiandae quod fugit sit ipsam deserunt.
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order Now">
+            <img src="images/gallery-img-6.jpg" class="food-img" />
+            <h3 class="food-name">Vegetables</h3>
+            <p class="food-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+              repudiandae quod fugit sit ipsam deserunt.
+            </p>
+          </a>
+        </div>
+      </section>
+
+      <!-- end of section3 -->
     </div>
     <script src="script.js"></script>
   </body>
