--- a/10 websites/foods/index.html
+++ b/10 websites/foods/index.html
@@ -113,6 +113,28 @@
       </section>
 
       <!-- end of section3 -->
+      <!-- section4  -->
+      <section class="section-4">
+        <div class="secttion-4-text">
+          <h2 class="section-4-heading">Sign me Up</h2>
+          <p class="section-4-paragraph">
+            Be the first one to know about new product
+          </p>
+        </div>
+        <form class="signup-form">
+          <input
+            type="email"
+            class="signup-form-input"
+            placeholder="Enter your email"
+          />
+          <button type="submit" class="signup-form-btn">
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </form>
+        <p class="copyright">CodeAndCreate &copy All rights reserved</p>
+      </section>
+
+      <!-- end of section4 -->
     </div>
     <script src="script.js"></script>
   </body>
